force-app/main/default/objects/Interface_Log__c/Interface_Log__c.object-meta.xml
<CustomObject>
    <description>Incoming and outgoing interface messages.  This table will be truncated periodically.</description>
    <label>Interface Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interface Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>