force-app/main/default/objects/Interface_Log__c/fields/Interface_Name__c.field-meta.xml
<CustomField>
    <fullName>Interface_Name__c</fullName>
    <description>Customer from SAP, Quote to SAP, etc</description>
    <label>Interface Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account from SAP</fullName>
            </value>
            <value>
                <fullName>Sales Order from SAP</fullName>
            </value>
            <value>
                <fullName>Service Order to SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>