force-app/main/default/objects/Interface_Log__c/fields/Json_Message__c.field-meta.xml
<CustomField>
    <fullName>Json_Message__c</fullName>
    <description>The message being sent to or from an external system.</description>
    <label>Json Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>